# mountix-shuttle

./: .gitignore  README.md  Shuttle.toml
migrations/data/: mountix_db-doc_mountains.txt
mountix-adapter/: Cargo.toml
mountix-adapter/src/: lib.rs
mountix-adapter/src/data/: mountains.json
mountix-adapter/src/persistence/: mod.rs  mongodb.rs
mountix-driver/: Cargo.toml  Secrets.toml.example
mountix-driver/src/: main.rs
mountix-driver/src/module/: mod.rs
mountix-driver/src/routes/: health.rs  information.rs  mountain.rs  surrounding_mountain.rs
mountix-driver/src/startup/: mod.rs
